--- a/style/home-page.css
+++ b/style/home-page.css
@@ -20,6 +20,19 @@ ul li {
 */
 
 /* Good Morning */
+/* main content */
+
+#main_content{
+
+background-color: rgb(18,18,18);
+ height: 100vh;
+  width:80%;
+  margin-left: 40%;
+}
+
+
+/* main content end */
+
 .good-morning {
     background:  -webkit-linear-gradient(-90deg, rgba(155, 3, 0, 1) 0%, rgba(155, 3, 0, 1) 5%, rgba(18, 18, 18, 1) 40%);
     background:-moz-linear-gradient(-90deg, rgba(155, 3, 0, 1) 0%, rgba(155, 3, 0, 1) 5%, rgba(18, 18, 18, 1) 40%);
