--- a/style/navbar.css
+++ b/style/navbar.css
@@ -48,7 +48,7 @@
   #mobile_view {
     position: absolute;
     background-color: black;
-    z-index: 8;
+    /* z-index: 8; */
     bottom: 0;
     width: 100%;
     height: 10%;
