--- a/style/navbar.css
+++ b/style/navbar.css
@@ -23,6 +23,7 @@
 
 #mobile_view {
   position: fixed;
+  bottom:0;
   background-color: black;
   z-index: 10;
   display: flex;
@@ -45,7 +46,7 @@
     display: none;
   }
 
-  #mobile_view {
+  /* #mobile_view {
     position: absolute;
     background-color: black;
     z-index: 8;
@@ -53,7 +54,7 @@
     width: 100%;
     height: 10%;
     margin: 0;
-  }
+  } */
 }
 #nav > .main_wrapper > .playlist > .hover_link {
   color: #9e9898;
