--- a/style/albumpage.css
+++ b/style/albumpage.css
@@ -1,5 +1,9 @@
 @import url(./root.css);
 
+.no-decoration {
+  text-decoration: none;
+  color: white;
+}
 /* Album Jumbotron */
 .song-list p {
   color: #fff;
@@ -10,7 +14,7 @@
   max-height: 5%;
 }
 
-* #album-id-player a,
+* a,
 i {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.486);
@@ -177,6 +181,12 @@ i {
 }
 
 .on-pulse:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.342),
+    0 17px 50px 0 rgba(0, 0, 0, 0.103);
+  transform: scale(1.05);
+}
+
+.on-pulse-i:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.342),
     0 17px 50px 0 rgba(0, 0, 0, 0.103);
   transform: scale(1.05);
