--- a/style/albumpage.css
+++ b/style/albumpage.css
@@ -36,11 +36,11 @@ i {
   padding: 0.2rem;
 }
 
-.div-album-page > div > img {
+/* .div-album-page > div > img {
   box-shadow: 1px -1px 77px 16px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: 1px -1px 77px 16px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: 1px -1px 77px 16px rgba(0, 0, 0, 0.65);
-}
+} */
 
 .icon-round {
   width: 2rem;
